k8s/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: projecttools
  namespace: project-tools
spec:
  host: projecttools-project-tools.apps.ipc-dev-jey5h0.clusters.intilitycloud.com
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
